# lie_group_robotics

./: README.md
lie_group_controller/: CMakeLists.txt  package.xml
lie_group_controller/src/: arm_ik_newton_raphson_rac_nric.cpp  euler_integration_gradient_descent.cpp  exponential_coordinate_relative_jacobian_gradient_descent.cpp  ik_newton_raphson.cpp  ik_newton_raphson_body_jacobian.cpp  ik_newton_raphson_body_jacobian_cmt.cpp  ik_newton_raphson_cmt.cpp  ik_newton_raphson_cmt_nric.cpp  ik_newton_raphson_passivity_cmt.cpp  ik_newton_raphson_qp.cpp  ik_newton_raphson_qp_constraints.cpp  ik_newton_raphson_rac.cpp  ik_newton_raphson_rac_nric.cpp  impedance_control_left.cpp  modified_euler_integration_gradient_descent.cpp  operational_space_control.cpp  runge_kutta_gradient_descent.cpp
lie_toolbox/: CMakeLists.txt  package.xml
lie_toolbox/include/lie_toolbox/: incremental_jacobian.hpp  lie_algebra.hpp  polynomial_interpolation.hpp
lie_toolbox/src/: incremental_jacobian.cpp  lie_algebra.cpp  polynomial_interpolation.cpp
robot_sim/: CMakeLists.txt  package.xml
robot_sim/mjcf/arm/: actuator.xml  physics.xml  scene.xml  setting_option.xml
robot_sim/mjcf/arm/parts_mjcf/: left_7dof_arm.xml
robot_sim/mjcf/leg/: actuator.xml  actuator_torque.xml  dummy_physics.xml  scene.xml  scene_torque.xml  setting_option.xml
robot_sim/mjcf/leg/parts_mjcf/: dummy_6dof_leg.xml  dummy_6dof_leg_torque.xml
robot_sim/src/: arm_test.py  leg_test.py  leg_torque_test.py  mjcf_test.py
