<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lie_toolbox</name>
  <version>0.0.0</version>
  <description>The lie_toolbox package</description>
  <maintainer email="pjsyukizang@hanyang.ac.kr">pjs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>libnlopt-cxx-dev</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
